# Prosedyre--og-objektorientert-programmering-TMA4102-

./: .gitignore  main.cpp  oppgave 1.cpp  readme.md  template.cpp
standard_env/: konfigurasjon.txt  meson.build
standard_env - Copy/src/: Tile.cpp  Tile.h
standard_env/include/: Animal.h  CourseCatalog.h  Emoji.h  MinesweeperWindow.h  Tile.h  blackjack.h  bouncingBall.h  card.h  cardCollection.h  carddeck.h  dealer.h  hand.h  matrix.h  player.h  utils.h
standard_env/missing_files/: meson-vscode.env
standard_env/src/: Animal.cpp  Cat.cpp  Dog.cpp  Emoji.cpp  MeetingWindow.cpp  MinesweeperWindow.cpp  Person.cpp  Tile.cpp  blackjack.cpp  bouncingBall.cpp  bouncingBall.h  cannonball.cpp  cannonball.h  card.cpp  cardCollection.cpp  carddeck.cpp  courseCatalog.cpp  course_catalog.cpp  hand.cpp  main.cpp  mastermind.cpp  matrix.cpp  optimizationTask.cpp  player.cpp  test.cpp  test.h  utils.cpp
standard_env/tests/: Animal_test.cpp  CourseCatalog_test.cpp  matrix_test.cpp  tests.cpp
standard_env/tests/include/: tests.h
øving 1/: main.cpp  oppg1.py
øving 10/include/: MinesweeperWindow.h
øving 10/src/: MinesweeperWindow.cpp  Tile.cpp  main.cpp
øving 2/: main.cpp
øving 3/src/: cannonball.cpp  cannonball.h  cannonball_viz.cpp  cannonball_viz.h  main.cpp  utils.h
øving 3/tests/: tests.cpp
øving 4/include/: masterVisual.h  mastermind.h
øving 4/src/: main.cpp  masterVisual.cpp  mastermind.cpp
øving 5/include/: blackjack.h  cardCollection.h  hand.h  player.h
øving 5/src/: blackjack.cpp  card.cpp  cardCollection.cpp  carddeck.cpp  hand.cpp  player.cpp
øving 5/tests/: cardCollection_test.cpp  card_test.cpp
øving 6/: debug.cpp
øving 6/src/: courseCatalog.cpp  main.cpp
øving 6/tests/: courseCatalog_test.cpp
øving 7/: meson.build
øving 7/include/: Cat.h  Dog.h  EmptyFace.h  Face.h  utils.h
øving 7/src/: Emoji.cpp  EmptyFace.cpp  Face.cpp  main.cpp
øving 8/: dummy.cpp  dummy.h  meson.build
øving 8/src/: Matrix.cpp  main.cpp
øving 8/tests/: Matrix_test.cpp
øving 9/: meson.build
øving 9/include/: Car.h  Meeting.h  MeetingWindow.h  Person.h
øving 9/src/: Car.cpp  Meeting.cpp
øving 9/tests/: Person_test.cpp
